# logseq-rs

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs  model.rs
crates/db/: Cargo.toml
crates/db/src/: blocks.rs  lib.rs  links.rs  pages.rs  pipeline.rs  query.rs  schema.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  markdown.rs  org.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/common/: ContextMenu.tsx
src/components/outliner/: Outliner.tsx
src/components/search/: SearchPanel.tsx
src/components/sidebar/: Sidebar.tsx
src/components/topbar/: Topbar.tsx
src/editor/: block-tree.ts
src/ipc/: commands.ts
src/stores/: editor.ts  graph.ts  ui.ts
src/types/: graph.ts
