[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parser",
    "crates/db",
    "crates/search",
    "crates/cli",
    # "src-tauri",  # 需要 GTK3 系统库，WSL 无 sudo 暂禁
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
