[package]
name = "logseq-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "logseq"
path = "src/main.rs"

[dependencies]
logseq-core = { path = "../core" }
logseq-parser = { path = "../parser" }
logseq-db = { path = "../db" }
logseq-search = { path = "../search" }
chrono = { workspace = true }
uuid = { workspace = true }
