[package]
name = "logseq-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = "0.12"
regex-lite = "0.1"
logseq-core = { path = "../core" }
